Fixed layout issues on the Login and Signup pages.

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -61,6 +61,12 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* #root
+{
+    background-color: transparent;
+} */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
